--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="A web site for collecting Arduino projects related to media technology. For use in the development of information searching in the study Make it quick and easy to access your Arduino project information online at any time."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/arduinoStock.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/Logo_arduinoStock.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
